# xfilter

./: .pre-commit-config.yaml  README.md  README.org  pyproject.toml  setup.cfg  setup.py  xfilter.py
.github/workflows/: ci.yaml  pre-commit.yaml
ci/: doc.yml  environment.yml  upstream-dev-env.yml
xfilter/: __init__.py  test_xfilter.py  xfilter.py
xfilter/tests/: test_xfilter.py
