[metadata]
name = xfilter
license = Apache
url = https://github.com/dcherian/xfilter

[options]
packages = xfilter
zip_safe = False  # https://mypy.readthedocs.io/en/latest/installed_packages.html
include_package_data = True
python_requires = >=3.6
install_requires =
    numpy >= 1.15
    pandas >= 0.25
    setuptools >= 41.2  # For pkg_resources
setup_requires =
    setuptools >= 41.2
    setuptools_scm

[tool:pytest]
python_files = test_*.py
testpaths = xfilter/tests/

[flake8]
ignore =
    # whitespace before ':' - doesn't work well with black
    E203
    E402
    # line too long - let black worry about that
    E501
    # do not assign a lambda expression, use a def
    E731
    # line break before binary operator
    W503
exclude=
    .eggs
    doc

[wheel]
universal = 1

[isort]
default_section=THIRDPARTY
known_first_party=xarray
multi_line_output=4
known_third_party = dask,numpy,scipy,setuptools

[aliases]
test = pytest

[pytest-watch]
nobeep = True

[rstcheck]
ignore_roles=pr,issue
ignore_directives=ipython,autodata
ignore_messages=(is not referenced\.$)
