[metadata]
name = xfilter
author = Deepak Cherian
author_email = deepak@cherian.net
license = Apache
description = Butterworth filters for xarray objects
long_description = file: README.md
long_description_content_type=text/markdown

url = https://github.com/dcherian/xfilter
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering

[options]
packages = find:
zip_safe = False  # https://mypy.readthedocs.io/en/latest/installed_packages.html
include_package_data = True
python_requires = >=3.8
install_requires =
    scipy
    numpy
    xarray

[options.extras_require]
all =
    dask
    xarray

[flake8]
ignore =
    # whitespace before ':' - doesn't work well with black
    E203
    E402
    # line too long - let black worry about that
    E501
    # do not assign a lambda expression, use a def
    E731
    # line break before binary operator
    W503
    # too complex
    C901
per-file-ignores =
    xfilter/tests/*.py:F401,F811
exclude=
    .eggs
    doc
